# txphase

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  build_lite.sh  build_obliv.sh  build_obliv_gramine.sh  clean.sh  common.sh  config.sh  obliv_build.sh  obliv_build_sgx.sh  obliv_run.sh  obliv_run_chr.sh  obliv_run_hrc.sh  obliv_run_sgx.sh  run.sh  run_chr.sh  run_eagle_1kg.sh  run_eagle_hrc.sh  run_eagle_ukb_giab.sh  run_gramine.sh  run_hrc.sh  run_obliv_1kg.sh  run_obliv_1kg_rss.sh  run_obliv_hrc.sh  run_obliv_hrc_rss.sh  run_obliv_ukb_single.sh  run_obliv_ukb_single_srr.sh  run_shapeit4_chr.sh  run_shapeit4_hrc.sh  run_shapeit_1kg.sh  run_ukb.sh  run_ukb_all.sh  run_ukb_giab.sh  ser_1kg.sh  ser_chr.sh  ser_hrc.sh  ser_shapeit4_chr.sh  (+2 more)
benchmark/: oblivious-parse-k.sh  oblivious-phasing.sh  phasing_batch.sh  shapeit4.sh  switch-error-rate.sh
benchmark/analyze-k/: Cargo.toml
benchmark/analyze-k/src/: main.rs
client/: Cargo.toml
client/src/: main.rs  record.rs
common/: Cargo.toml
common/src/: lib.rs  types.rs
common/src/ref_panel/: block.rs  mod.rs
compressed-pbwt/: Cargo.toml
compressed-pbwt/benches/: bench.rs
compressed-pbwt/src/: lib.rs  test_utils.rs  top_s.rs
compressed-pbwt/src/baseline/: mod.rs
compressed-pbwt/src/bin_/: mcmc_init.rs
compressed-pbwt/src/mcmc_init/: init_single_site.rs  init_tree.rs  mcmc_init.rs  mod.rs  obliv_rank.rs
compressed-pbwt/src/nn/: mod.rs  nn.rs  nn_tree.rs  obliv_rank.rs  rank.rs
compressed-pbwt/src/pbwt_trie/: input.rs  insert.rs  mod.rs  obliv_insert.rs  trie.rs
eagle-bin/: Makefile  eagle.manifest.template
experiments/arith/: Cargo.toml
experiments/arith/src/: main.rs
experiments/eagle/: process_time_mem.sh  run_gramine_samples.sh  run_samples.sh  run_ser.sh
experiments/mem/txphase/: process_mem.sh  run_time_mem.sh
experiments/nosgx/: build.sh  run.sh
experiments/rss/: run_sgx_time.sh  run_time.sh  run_time_mem.sh
experiments/ser/shapeit/: batch_shapeit4_ukb_indiv.sh  run_shapeit_ukb_indiv.sh
experiments/ser/txphase/: process_ser.sh  run_ser.sh  ser_ukb.sh
experiments/sgx/: build_sgx.sh  build_sgx_gramine.sh  run_sgx.sh  run_sgx_gramine.sh
experiments/sgx/gramine/: Makefile
experiments/shapeit/: process_ser_remove_imputed.sh  process_time_by_sample_sizes.sh  process_time_mem_by_sample_sizes.sh  run.sh  run_all_samples.sh  run_gramine_samples.sh  run_samples.sh  run_ser.sh
experiments/shapeit/giab/: run_1kg.sh  run_hrc.sh  run_ukb.sh  ser.sh
experiments/time/: process_time.sh  run_sgx_gramine_time.sh  run_sgx_time.sh
experiments/time/shapeit/: process_time.sh  run_time.sh
experiments/time/txphase/: process_time.sh  run_sgx_gramine_time.sh
experiments/txphase/giab/: run_1kg.sh  run_hrc.sh  run_ukb.sh
experiments/txphase/ser/: process_ser.sh  run.sh
experiments/txphase/sim/: build.sh  process_time_mem.sh  process_time_mem_by_sample_sizes.sh  run_internal.sh  run_samples.sh
experiments/txphase/time/: build.sh  run_internal.sh  run_samples.sh
host/: Cargo.toml
host/src/: geneticmap.rs  main.rs  record.rs  site.rs
m3vcf/: Cargo.toml
m3vcf/src/: block.rs  lib.rs  ref_panel.rs  site.rs
obliv-utils/: Cargo.toml
obliv-utils/benches/: obliv_vec.rs
obliv-utils/src/: aligned.rs  bitmap.rs  bitonic_sort.rs  cmov.rs  cond_copy.rs  lib.rs  min_heap.rs  neighbors.rs  top_s.rs  utils.rs  vec.rs
oram-pbwt/: Cargo.toml
oram-pbwt/src/: main.rs
oram-sgx/: Cargo.toml
oram-sgx/src/: align.rs  aligned_vec.rs  bitonic_sort.rs  leaky.rs  lib.rs  linear_scan.rs  obliv_bitmap.rs  obliv_filter.rs  obliv_vec.rs  oram.rs  path_oram.rs  small_oram.rs  utils.rs
oram-sgx/src/backend/: leaky.rs  linear_scan.rs  mod.rs  path_oram.rs
phasing/: Cargo.toml  Makefile  phasing.manifest.template  run.sh  run_leaky.sh  run_nosgx.sh  run_nosgx_leaky.sh  run_nosgx_leaky_debug.sh
phasing/src/: block.old.rs  block.rs  dynamic_fixed.rs  genotype_graph.rs  genotypes.rs  hmm.old.rs  hmm.rs  hmm2.rs  initialize.rs  main.rs  mcmc.rs  memory.rs  neighbors_finding.rs  pbwt.rs  pbwt2.rs  ref_panel.old.rs  ref_panel.rs  sampling.rs  small_oram.rs  union_filter.rs  utils.rs  variants.rs  viterbi.rs  windows_split.rs
phasing/src/full_neighbor_finding/: mod.rs  pbwt.rs
phasing/src/hmm/: mod.rs  params.rs
phasing/src/mcmc/: filter.rs  initialize.rs  mod.rs  params.rs  sampling.rs  sampling.rs.backup1  viterbi.rs  windows_split.rs
phasing/src/neighbor_finding/: mod.rs  record.rs
phasing/src/neighbor_finding/baseline/: pbwt.rs
phasing/src/neighbor_finding/mcmc_init/: init_single_site.rs  init_tree.rs  mcmc_init.rs  mod.rs  obliv_rank.rs  rank.rs
phasing/src/neighbor_finding/nn/: mod.rs  nn.rs  nn_tree.rs
phasing/src/neighbor_finding/pbwt_trie/: insert.rs  obliv_insert.rs  trie.rs
phasing/src/oram/: align.rs  dynamic_ls.rs  large_ls.rs  mod.rs  small_ls.rs
phasing/src/ref_panel/: block.rs  mod.rs
phasing/src/rss_hmm/: filtered_block.rs  mod.rs  params.rs  reduced.rs  reduced_obliv.rs  reduced_obliv_.rs  reduced_obliv_new.rs
phasing/src/rss_hmm_filtered/: ab_elem.rs  filtered_block.rs  mod.rs  reduced_obliv.rs
profiles/dataset/: 1kg.sh  hrc.sh  ukb_all.sh  ukb_single.sh
profiles/phasing/: depth12.sh  rss-1kg.sh  rss-ukb20.sh
scripts/: sample.sh  switch-error-rate.sh
shapeit-bin/: Makefile  download.sh
switch-error-check/: Cargo.toml
switch-error-check/src/: main.rs
tp-fixedpoint/: Cargo.toml
tp-fixedpoint/src/: fixed_32.rs  fixed_64.rs  lib.rs  tp_i128.rs  tp_u128.rs  tp_u64x64.rs  tp_u64x8.rs
