[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m3vcf = { path = "../m3vcf" }
common = { path = "../common" }
ndarray = { version = "0.15", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
rand = "0.8"
rust-htslib = "0.38"
bincode = "1.3"
bufstream = "0.1"
anyhow = "1.0"
clap = { version = "4.5.0", features = ["derive"] }
