[package]
name = "obliv-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timing-shield = "0.3.0"

[dev-dependencies]
rand = "0.8"
criterion = { version = "0.5.1", features = ["real_blackbox"] }

[[bench]]
name = "obliv_vec"
harness = false
