[package]
name = "phasing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
leak-resist = ["tp-fixedpoint"] 
leak-resist-fast = ["leak-resist"] 
leak-resist-new = ["tp-fixedpoint"]

[dependencies]
rand = "0.8"
ndarray = {version = "0.15", features = ["approx", "serde"]}
bitvec = "0.22"
paste = "1.0"
maligned = "0.2"
bincode = "1.3"
bufstream = "0.1"
#oram-sgx = { path = "../oram-sgx" }
tp-fixedpoint = { path = "/home/ndokmai/workspace/sgx-genotype-imputation/tp-fixedpoint", optional = true }
m3vcf = { path = "/home/ndokmai/workspace/sgx-genotype-imputation/m3vcf" }
#timing-shield = { version = "0.3", optional = true }
rand_chacha = "0.3"
#log = "0.4"
#env_logger = "0.9"
anyhow = "1.0"
statrs = "0.15"
num-traits = "0.2"
lazy_static = "1.4"

#[dev-dependencies]
#rand_chacha = "0.3"

[package.metadata.fortanix-sgx]
# stack size (in bytes) for each thread, the default stack size is 0x20000.
stack-size=0x200000
# heap size (in bytes), the default heap size is 0x2000000.
#heap-size=0x800000000
#heap-size=0x400000000
heap-size=0x40000000
# the default number of threads is equal to the number of available CPUs of
# the current system.
# Gotcha: Don't forget to count the main thread when counting number of
# threads.
threads=10
# SSA frame size (in pages) for each thread, the default SSA frame size is 1.
# You normally don't need to change the SSA frame size.
ssaframesize=1
# whether to enable EDP debugging features in the enclave, debugging is
# enabled by default.
debug=true


[profile.release]
debug=true
overflow-checks = true 

