[package]
name = "phasing"
version = "0.1.0"
edition = "2021"

[features]
default = ["obliv"]
benchmarking = []
obliv = ["tp-fixedpoint", "obliv-utils"]

[dependencies]
rand = "0.8"
ndarray = {version = "0.15", features = ["approx", "serde"]}
bitvec = "1.0"
paste = "1.0"
maligned = "0.2"
bincode = "1.3"
bufstream = "0.1"
common = { path = "../common" }
obliv-utils = { path = "../obliv-utils", optional = true }
tp-fixedpoint = { path = "../tp-fixedpoint", optional = true }
m3vcf = { path = "../m3vcf" }
rand_chacha = "0.3"
anyhow = "1.0"
statrs = "0.16"
num-traits = "0.2"
lazy_static = "1.4"
clap = { version = "4.5.0", features = ["derive"] }
timing-shield = "0.3.0"

#[dev-dependencies]
#rand_chacha = "0.3"
